fix color contrast issue

--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -205,11 +205,11 @@ button {
     /*border-bottom: solid 1px var(--menu-highlight-color);*/
     border-bottom: none;
 }
-.nav-lnk:hover /*.navigation a:hover*/ {
+.nav-lnk:hover, .nav-lnk.current:hover {
     background-color: var(--dark-menu-color);
     color: var(--dark-menu-background);
 }
-.nav-lnk.light:hover {
+.nav-lnk.light:hover, .nav-lnk.current.light:hover {
     background-color: var(--menu-color);
     color: var(--menu-background);
 }
@@ -234,9 +234,9 @@ h1 {
     margin-bottom: 10px;
 }
 .directory-button{
-    width: 48px;
-    height: 48px;
-    padding: 4px;
+    width: 50px;
+    height: 50px;
+    padding: 2px;
 }
 .gridView{
     grid-column: 2;
@@ -246,6 +246,10 @@ h1 {
 }
 .directory-button.selected {
     border: var(--menu-highlight-background) solid 2px;
+    border-radius: 5px;
+}
+.directory-button.light.selected {
+    border: var(--menu-color) solid 2px;
     border-radius: 5px;
 }
 .directory-button-image{
